@@ -77,8 +77,13 @@
             <artifactId>materialfx</artifactId>
             <version>21.18.0-alpha</version>
         </dependency>
+        <!-- Send email look after -->
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.9.3</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -88,6 +93,7 @@
                 <configuration>
                     <source>23</source>
                     <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
 
                 </configuration>
             </plugin>
